crates/hydracache-db/tests/policy/fail_prepared_unknown_option.stderr
error: unsupported prepared_query_policy option
 --> tests/policy/fail_prepared_unknown_option.rs:6:9
  |
6 |         table = "users",
  |         ^^^^^
